--- a/style.css
+++ b/style.css
@@ -126,6 +126,6 @@ body {
     flex-basis: 48%;
     margin-bottom: 10px;
     border-radius: 20px;
-    transition: all 0.2
+    transition: all 0.2;
   }
   
